= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [nng-rs Unreleased] ==

=== Added ===

* Added the `tcp::BoundPort` and `websocket::Protocol` options.
* A new `Error::ConnectionShutdown` variant.

=== Changed ===

* Removed `nonblocking` argument from `Listener::new` as it is ignored in `libnng v1.2`.
* Removed `nonblocking` argument from `ListenerOptions::new` to match `Listener::new`.
* Renamed `{Dialer,Listener}Options` to `{Dialer,Listener}Builder` to better match the builder pattern.
* All `Message` and `Header` methods now panic on allocation failure instead of returning a `Result`.

=== Deprecated ===

* Deprecated `Socket::listen_async` as it is functionally equivalent to `Socket::listen` and will be removed at some point in the future.
* Deprecated `Socket::into_raw` in favor of the `TryFrom` trait. (#43)

=== Removed ===

* `Message::from_slice` and `Message::try_clone` as the entire `Message` type now panics on allocation failure.

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.5.1] - 2019-12-07 ==

=== Fixed ===

* Made the `RecvFd` and `SendFd` readable instead of writable. (#45)

== [nng-rs v0.5.0] - 2019-06-20 ==

=== Added ===

* The `Socket::try_{send,recv}` and the `Socket::{dial,listen}_async` functions have been added. (#34)
* The `ffi-module` feature is now available, which allows retrieving the underlying nng-sys types. (#33)
* Added a `RawSocket` type that marks that the given socket is in "raw" mode. (#31)
* Added forwarder and reflector devices. (#32)
* The `Message` and `Header` types now implement `Write`.