@@ -281,6 +281,29 @@ impl<'a> From<&'a Vec<u8>> for Message
 	fn from(s: &Vec<u8>) -> Message { s.as_slice().into() }
 }
 
+macro_rules! array_impl
+{
+	($s:tt) => {
+		impl From<[u8; $s]> for Message
+		{
+			fn from(s: [u8; $s]) -> Message
+			{
+				s[..].into()
+			}
+		}
+	};
+
+	($s:tt, $($r:tt),+) => {
+		array_impl!($s);
+		array_impl!($($r),+);
+	}
+}
+
+array_impl!(
+	0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25,
+	26, 27, 28, 29, 30, 31, 32
+);
+
 impl FromIterator<u8> for Message
 {
 	fn from_iter<T>(iter: T) -> Message
